# Sparkle-project

./: ._I have analyzed the requirements and the.md  ._README.md  .codecov.yml  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  CELERY_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  COMMAND_REFERENCE.md  Claude_Code_API_Alignment_Guide.md  DEVELOPMENT_GUIDE.md  ENV_CONFIG_UNIFIED.md  GALAXY_OPTIMIZATION_REPORT.md  GEMINI.md  GIT_STATUS_SUMMARY.md  I have analyzed the requirements and the.md  IMPLEMENTATION_REPORT.md  LUMINOUS_COGNITION_ALIGNMENT_REPORT.md  Makefile  PERFORMANCE_WEEK3_SUMMARY.md  PHASE0_COMPLETE_SUMMARY.md  PHASE2_OPTIMIZATION_REPORT.md  PHASE4_COMPLETION_VERIFICATION.md  PHASE4_DEPLOYMENT_CHECKLIST.md  PHASE4_GETTING_STARTED.md  PHASE4_QUICK_REFERENCE.md  PHASE4_TESTING_AND_DEPLOYMENT.md  PHASE5_REVIEW_FIXES.md  PHASE9_MOAT_IMPLEMENTATION_PROMPT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  QUICK_START_CELERY.md  README.md  README_PHASE0.md  REPAIR_SUMMARY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  (+22 more)
backend/: .dockerignore  .env.example  .env.migration  Dockerfile  PHASE5_IMPLEMENTATION.md  celerybeat-schedule  check_db.py  create_db.py  fix_db.py  grpc_server.py  pyproject.toml  requirements-agent-graph.txt  requirements-ingestion.txt  requirements-llm.txt  requirements-reporting.txt  requirements.txt  run_fix.py  setup_demo_data.py  test_deepseek.py  test_grpc_client.py  test_grpc_simple.py  test_metrics.py  test_token_metering.py  test_user_service_cache.py  test_websocket_client.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions.backup/: 3682fd8c7978_add_focus_sessions.py  54e1f05154ad_add_galaxy_v2_tables.py  (+10 more)
backend/app/: celery_schedule.py  config.py  config_production.py  config_rag_strategy.py  main.py  test_e2e_integration.py  test_performance_load.py  test_security.py
backend/app/api/: deps.py  (+2 more)
backend/config/: production_celery.py
backend/docs/: DB_PARTITIONING_STRATEGY.md  OUTBOX_GROWTH_STRATEGY.md  PARTITIONING_EVALUATION.md
backend/gateway/: .golangci.yml  Dockerfile  go.mod  go.sum  sqlc.yaml
backend/orchestration/: graph_rag.py
backend/scripts/: chaos_scheduler.py  check_redis_auth.py  check_shadowing.py  clean_demo_data.py  demo_phase5.sh  import_check.py  init_graph_schema.py  init_redis_index.py  init_semantic_cache_index.py  install_age.sh  migrate_page_numbers.py  migrate_to_age.py  seed_rag_test_data.py  setup_celery.py  setup_security.py  setup_smoke_test_data.py  start_billing_worker.py  start_summarization_worker.py  startup_check.py  sync_pg_to_redis.py  test_migration_rollback.py  test_rag_v2.py  test_report_generation.py  verify_phase9_flywheels.py  zero_downtime_migration.py
backend/seed_data/: load_seed_data.py  update_subjects.py
backend/services/: graph_knowledge_service.py
backend/tests/: conftest.py  manual_rag_test.py  test_agent_stats_integration.py  test_analytics_service.py  test_context_injection.py  test_context_manager.py  test_context_pruner.py  test_db_partitioning.py  test_exam_intent_detection.py  test_graph_rag.py  test_graph_reasoning.py  test_llm_parser.py  test_llm_service_streaming.py  test_orchestrator_fsm.py  test_orchestrator_init.py  test_orchestrator_simple.py  test_phase2_core.py  test_phase2_integration.py  test_plan_progress_update.py  test_rag_retrieval.py  test_v2_agent_integration.py  test_vector_search.py
backend/workers/: graph_sync_worker.py  signals_learning_worker.py
(+4418 files in other folders)
